--- a/FFS_APP2/app/src/main/res/layout/activity_main.xml
+++ b/FFS_APP2/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f68c06"
-    tools:context="com.example.ilhamrahman.ffs_app.MainActivity">
+    tools:context="com.example.shaviyomarasinghe.ffs_app.MainActivity">
 
     <TextView
         android:id="@+id/textView3"
@@ -15,11 +15,14 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="284dp"
+        android:layout_marginTop="8dp"
         android:layout_marginRight="5dp"
         android:layout_marginLeft="15dp"
-        app:layout_constraintHorizontal_bias="0.703" />
+        app:layout_constraintHorizontal_bias="0.466"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3"
+        app:layout_constraintVertical_bias="0.554" />
 
     <TextView
         android:id="@+id/textView4"
@@ -33,7 +36,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3"
-        app:layout_constraintVertical_bias="0.96" />
+        app:layout_constraintVertical_bias="0.958" />
 
     <TextView
         android:id="@+id/textView5"
@@ -62,7 +65,7 @@
         android:layout_width="83dp"
         android:layout_height="35dp"
         android:text="Fire"
-        android:onClick="FireActivity"
+        android:onClick="getPacket"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="369dp"
         android:layout_marginLeft="312dp"
@@ -73,7 +76,7 @@
         android:layout_width="81dp"
         android:layout_height="38dp"
         android:text="Smoke"
-        android:onClick="SmokeActivity2"
+        android:onClick="SmokeActivity"
         android:layout_marginLeft="314dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -85,8 +88,8 @@
         android:layout_height="40dp"
         android:text="Temperature"
         android:onClick="TempActivity"
-        android:layout_marginTop="470dp"
-        android:layout_marginLeft="271dp"
+        android:layout_marginTop="469dp"
+        android:layout_marginLeft="273dp"
         app:layout_constraintLeft_toLeftOf="@+id/textView6"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -95,9 +98,7 @@
         android:layout_width="272dp"
         android:layout_height="223dp"
         app:srcCompat="@mipmap/ic_launcher"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginRight="70dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        tools:layout_editor_absoluteY="33dp"
+        tools:layout_editor_absoluteX="56dp" />
 
 </android.support.constraint.ConstraintLayout>
