--- a/FFS_app/app/src/main/res/layout/activity_main.xml
+++ b/FFS_app/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,8 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="305dp"
-        android:layout_height="19dp"
+        android:layout_width="279dp"
+        android:layout_height="36dp"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
@@ -33,60 +33,30 @@
         app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3"
-        app:layout_constraintVertical_bias="0.96" />
+        app:layout_constraintVertical_bias="0.895" />
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="306dp"
-        android:layout_height="21dp"
+        android:layout_width="278dp"
+        android:layout_height="39dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="179dp"
         android:text="Press This Button To See the Status of Smoke:"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView3"
+        tools:layout_editor_absoluteY="418dp" />
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="310dp"
-        android:layout_height="45dp"
+        android:layout_width="252dp"
+        android:layout_height="46dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="231dp"
         android:text="Press This Button To See the Current Temperature in Your Home:"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
-
-    <Button
-        android:id="@+id/fireButton"
-        android:layout_width="83dp"
-        android:layout_height="35dp"
-        android:text="Fire"
-        android:onClick="sendMessage"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="369dp"
-        android:layout_marginLeft="312dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
-
-    <Button
-        android:id="@+id/smokeButton"
-        android:layout_width="81dp"
-        android:layout_height="38dp"
-        android:text="Smoke"
-        android:layout_marginLeft="314dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="418dp" />
-
-    <Button
-        android:id="@+id/tempButton"
-        android:layout_width="130dp"
-        android:layout_height="40dp"
-        android:text="Temperature"
-        android:layout_marginTop="470dp"
-        android:layout_marginLeft="271dp"
-        app:layout_constraintLeft_toLeftOf="@+id/textView6"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -97,5 +67,53 @@
         android:layout_marginTop="16dp"
         android:layout_marginRight="70dp"
         app:layout_constraintRight_toRightOf="parent" />
+
+    <Button
+        android:id="@+id/fireButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fire"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="194dp"
+        app:layout_constraintLeft_toRightOf="@+id/textView4"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.966" />
+
+    <Button
+        android:id="@+id/smokeButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Smoke"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="9dp"
+        app:layout_constraintLeft_toRightOf="@+id/textView5"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.384"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintVertical_bias="0.745" />
+
+    <Button
+        android:id="@+id/tempButton"
+        android:layout_width="126dp"
+        android:layout_height="51dp"
+        android:text="Temperature"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintVertical_bias="0.861"
+        android:layout_marginRight="6dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/textView6"
+        android:layout_marginLeft="8dp" />
+
 
 </android.support.constraint.ConstraintLayout>
